--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -19,6 +19,11 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
+
+	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
