--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -19,10 +19,15 @@ ext {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
