--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+auth.authorization-token.ttl=60000
+auth.refresh-authorization-token.ttl=120000
