--- a/auth-service/build.gradle
+++ b/auth-service/build.gradle
@@ -22,11 +22,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+	implementation 'io.cucumber:cucumber-spring:6.8.1'
 	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	implementation 'javax.xml.bind:jaxb-api:2.3.1'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'io.cucumber:cucumber-java:6.8.1'
+	testImplementation 'io.cucumber:cucumber-junit:6.8.1'
+	testImplementation 'org.junit.vintage:junit-vintage-engine:5.7.1'
+
 }
 
 dependencyManagement {
