--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8083
 
 user-registration.url=http://localhost:8082
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/harmony_auth_service
 spring.datasource.username=root
