--- a/build.gradle
+++ b/build.gradle
@@ -17,17 +17,17 @@ ext {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-web:2.5.3'
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.0.3'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.3'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.3'
 
-	implementation 'io.cucumber:cucumber-spring:6.8.1'
-	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
+	implementation 'io.cucumber:cucumber-spring:6.11.0'
+	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
 	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-	implementation 'javax.xml.bind:jaxb-api:2.3.1'
+	implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.3'
 
 }
 
