Create Password Recovery Token

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8083
 
 user-registration.url=http://localhost:8082
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/harmony_auth_service
 spring.datasource.username=root
@@ -13,3 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
 auth.authorization-token.ttl=60000
 auth.refresh-authorization-token.ttl=120000
+password-recovery-token.ttl=120000
+
+spring.kafka.bootstrap-servers=192.168.0.17:9092
+
