--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ user-registration.url=http://localhost:8082
 
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/harmony_auth_service
+spring.datasource.url=jdbc:mysql://harmony-auth-db:3306/harmony_auth_service
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
