--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=80
 
-user-registration.url=http://localhost:8082
+user-registration.url=http://harmony-user-registration:80
 
 spring.jpa.hibernate.ddl-auto=update
 
@@ -15,5 +15,5 @@ auth.authorization-token.ttl=60000
 auth.refresh-authorization-token.ttl=120000
 password-recovery-token.ttl=120000
 
-spring.kafka.bootstrap-servers=192.168.0.17:9092
+spring.kafka.bootstrap-servers=kafka:29092
 
