--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=80
 
 user-registration.url=http://harmony-user-registration:80
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.datasource.url=jdbc:mysql://harmony-auth-db:3306/harmony_auth_service
 spring.datasource.username=root
